Add homepage structure and CSS file

--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
     </section>
 
     <section id="intro-video" class="card">
-      <h2>Video Introduction</h2>
+     <h2>My Shop Video Introduction</h2>
       <video controls width="480">
         <source src="resources/vdokarn.mp4" type="video/mp4" />
       </video>
@@ -42,7 +42,9 @@
 
   <footer id="contact" class="site-footer">
     <p>Contact us: karn@myshop.com | Tel: 012-345-6789</p>
-    <p>&copy;2025 My Shop. All rights reserved.</p>
+    <footer>
+  <p>© 2025 My Shop - Homepage</p>
+</footer>
   </footer>
 </body>
 </html>
