Add Essential Mool Cream brightening header

--- a/my1stcategory.html
+++ b/my1stcategory.html
@@ -22,7 +22,7 @@
     <section class="products">
       <article class="product-card">
         <img src="resources/8809467633446_1.webp" alt="Essential Mool Cream 50ml" />
-        <h2>Essential Mool Cream 50ml</h2>
+        <h2>Essential Mool Cream brightening</h2>
         <p>Non-drying Mool Cream's moisture shield</p>
         <p class="price">฿1250</p>
       </article>
