Update my2ndcategory.html: Insert image for product display

--- a/my2ndcategory.html
+++ b/my2ndcategory.html
@@ -27,7 +27,7 @@
         <p class="price">฿1,250</p>
       </article>
       <article class="product-card">
-        <img src="resources/LIP-PRESSIONWaterTintedLipBalm_ROSA.webp" alt="Lip-Pression Water Tinted Lip Balm" />
+        <img src="resources/่่junglip.webp" alt="Lip-Pression Water Tinted Lip Balm" />
         <h2>Lip-Pression Water Tinted Lip Balm</h2>
         <p>Soft-toned tinted lip balm</p>
         <p class="price">฿590</p>
